--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
       - develop
-    pull_request:
+  pull_request:
+    branches:
       - main
       - develop
 
@@ -17,7 +18,7 @@ jobs:
       matrix:
         pyversion: '3.10.0'
 
-      services:
+    services:
       postgres:
         image: postgres:16.2
         env:
@@ -29,27 +30,26 @@ jobs:
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
-      steps:
+    steps:
       - name: Checkout code
-      uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10.0'
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10.0'
 
       - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run migrations
         run: |
           cd banquetbuddy
           python manage.py makemigrations
           python manage.py migrate
+
       - name: Run tests
-      run: |
-        python manage.py test
-
-
+        run: |
+          python manage.py test
