--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        pyversion: '3.10.0'
+        pyversion: ['3.10.0']
 
     services:
       postgres:
@@ -37,7 +37,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10.0'
+          python-version: ['3.10.0']
 
       - name: Install dependencies
         run: |
