--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        pyversion: ['3.10.0']
+        python-version: ['3.10.0']
 
     services:
       postgres:
@@ -27,7 +27,6 @@ jobs:
           POSTGRES_DB: ispp
         ports:
           - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
@@ -37,7 +36,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ['3.10.0']
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
