--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -52,13 +52,4 @@ jobs:
         run: |
           cd banquetBuddy
           coverage run --source='.' manage.py test
-          coverage xml -o coverage-reports/coverage.xml
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          args: >
-            -Dsonar.python.coverage.reportPaths=banquetBuddy/coverage-reports/coverage.xml
+          coverage xml -o ../coverage-reports/coverage.xml --omit '*/tests/*'
