--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Comprobación completa del repositorio
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -53,4 +55,3 @@ jobs:
           cd banquetBuddy
           coverage run --source='.' manage.py test
           coverage xml -o ../coverage-reports/coverage.xml --omit '*/tests/*'
-        
