--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,12 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.coverage
+.coverage.*
 .cache
 nosetests.xml
+coverage.xml
+*.cover
 .hypothesis/
 
 # Translations
