--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=ISPP-GRUPO-8_BANQUETBUDDY
 sonar.organization=ispp-grupo-8
 sonar.sources=.
 sonar.python.version=3.10
-sonar.python.coverage.reportPaths=${{ github.workspace }}/banquetBuddy/coverage-reports/coverage.xml
+sonar.python.coverage.reportPaths=banquetBuddy/coverage-reports/coverage.xml
