fix: SonarCloud modifying tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,9 @@ deps =
     pytest-django
     coverage
 commands =
-    coverage run --source='banquetBuddy' banquetBuddy/manage.py test
-    coverage xml -o banquetBuddy/coverage-reports/coverage.xml
+    coverage run --source=banquetBuddy manage.py test
+    coverage report -m
+    coverage xml -o ../coverage-reports/coverage.xml
 
 [coverage:run]
 branch = True
@@ -18,8 +19,8 @@ omit =
     */migrations/*
     */tests/*
     */test_*.py
-    banquetBuddy/banquetBuddy/manage.py
-    banquetBuddy/clean_django_modules.py
-    banquetBuddy/clear_database.py
-    banquetBuddy/delete_all_tables_database.py
-    banquetBuddy/populate_db.py
+    */manage.py
+    */clean_django_modules.py
+    */clear_database.py
+    */delete_all_tables_database.py
+    */populate_db.py
