--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,7 +38,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Create coverage reports directory
-        run: mkdir -p banquetBuddy/coverage-reports
+        run: mkdir -p coverage-reports
 
       - name: Install Tox
         run: pip install tox
