fix: SonarCloud tryin with relative files in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ commands =
     coverage xml -o ../coverage-reports/coverage.xml
 
 [coverage:run]
+relative_files = True
 branch = True
 omit =
     */migrations/*
