--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39
+envlist = py310
 skipsdist = True
 
 [testenv]
@@ -9,9 +9,8 @@ deps =
     pytest-django
     coverage
 commands =
-    coverage run --source=banquetBuddy manage.py test
-    coverage report -m
-    coverage xml -o ../coverage-reports/coverage.xml
+    coverage run -m pytest
+    coverage xml -o coverage-reports/coverage.xml
 
 [coverage:run]
 relative_files = True
