--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
     coverage
 commands =
     coverage run -m pytest
-    coverage xml -o coverage-reports/coverage.xml
+    coverage xml 
 
 [coverage:run]
 relative_files = True
