fix: SonarCloud resolvin problems with migrate v2

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -57,9 +57,10 @@ jobs:
       - name: Aplicar migraciones
         run: |
           cd banquetBuddy
+          python manage.py makemigrations
           python manage.py migrate
           echo "Migraciones aplicadas."
-          
+
       - name: Ejecutar pruebas con Coverage y generar reporte
         run: |
           cd banquetBuddy
