feature:added selenium & locust config for testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ django-phonenumber-field[phonenumbers]
 faker==23.3.0
 coverage==7.4.3
 stripe==4.0.2
+selenium==4.1.0
+locust==2.5.1
+chromedriver-autoinstaller==0.2.2
+
