--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -54,6 +54,16 @@ jobs:
           cd banquetBuddy
           pwd
           ls -la
+
+      - name: Dar permisos al driver de Selenium
+        run: |
+          chmod +x banquetBuddy/static/driver/chromedriver.exe
+
+      - name: Crear archivo .env y escribir DB_PASSWORD
+        run: |
+          echo "DB_PASSWORD=ispp" > .env
+          echo ".env creado y contraseña de base de datos escrita."
+
       - name: Aplicar migraciones
         run: |
           cd banquetBuddy
