--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,7 @@ stripe==4.0.2
 tzdata==2024.1
 urllib3
 auto-changelog
-selenium
-python-dotenv
+selenium==4.1.0
+locust==2.5.1
+chromedriver-autoinstaller==0.2.2
+coverage
